src/logs/exceptions-api.log
[2023-10-07 14:37:22] [31merror[39m uncaughtException: WHERE parameter "vehicle_type_id" has invalid "undefined" value
Error: WHERE parameter "vehicle_type_id" has invalid "undefined" value
    at PostgresQueryGenerator.whereItemQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1743:13)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1734:25
    at Array.forEach (<anonymous>)
    at PostgresQueryGenerator.whereItemsQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1732:35)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1840:30
    at Array.map (<anonymous>)
    at PostgresQueryGenerator._whereGroupBind (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1839:21)
    at PostgresQueryGenerator.whereItemQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1790:19)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1734:25
    at Array.forEach (<anonymous>)
[2023-10-07 14:38:07] [31merror[39m uncaughtException: WHERE parameter "vehicle_type_id" has invalid "undefined" value
Error: WHERE parameter "vehicle_type_id" has invalid "undefined" value
    at PostgresQueryGenerator.whereItemQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1743:13)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1734:25
    at Array.forEach (<anonymous>)
    at PostgresQueryGenerator.whereItemsQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1732:35)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1840:30
    at Array.map (<anonymous>)
    at PostgresQueryGenerator._whereGroupBind (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1839:21)
    at PostgresQueryGenerator.whereItemQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1790:19)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1734:25
    at Array.forEach (<anonymous>)
[2023-10-07 14:38:43] [31merror[39m uncaughtException: WHERE parameter "vehicle_type_id" has invalid "undefined" value
Error: WHERE parameter "vehicle_type_id" has invalid "undefined" value
    at PostgresQueryGenerator.whereItemQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1743:13)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1734:25
    at Array.forEach (<anonymous>)
    at PostgresQueryGenerator.whereItemsQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1732:35)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1840:30
    at Array.map (<anonymous>)
    at PostgresQueryGenerator._whereGroupBind (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1839:21)
    at PostgresQueryGenerator.whereItemQuery (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1790:19)
    at C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\node_modules\sequelize\lib\dialects\abstract\query-generator.js:1734:25
    at Array.forEach (<anonymous>)
[2023-10-07 14:38:52] [31merror[39m uncaughtException: Unexpected token ';'
C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\building_capacity.js:33
    const vehicleTypeId = req.params.;
                                     ^

SyntaxError: Unexpected token ';'
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\building_capacity.js:4:26)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
